<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cut_card_config_background"
    tools:context=".Perfil">

    <TextView
        android:id="@+id/perfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/activity_label_perfil"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/perfil"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="0, 1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewAltura"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_column="0"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/altura"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/alturaOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="TextView"
                            android:textAlignment="viewEnd"
                            android:textSize="22sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewGenero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/genero"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/generoOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="TextView"
                            android:textAlignment="viewEnd"
                            android:textSize="22sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textIdade"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/idade"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="28sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/dataNascimentoOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="TextView"
                            android:textAlignment="viewEnd"
                            android:textSize="22sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewPeso"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/peso"
                            android:textAlignment="viewStart"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="28sp"
                            android:textStyle="bold"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/pesoOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="12dp"
                            android:text="TextView"
                            android:textAlignment="viewEnd"
                            android:textSize="22sp" />
                    </TableRow>
                </TableLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>